fix: set document overflow style to prevent screen jump (#601)
* fix: set doc overflow auto

* chore: changeset

--- a/packages/webapp/src/webview/ui/components/App/App.scss
+++ b/packages/webapp/src/webview/ui/components/App/App.scss
@@ -5,6 +5,9 @@ html {
     font-family: var(--vscode-font-family);
     -webkit-font-smoothing: antialiased;
 }
+body[role='document'] {
+    overflow: auto !important;
+}
 
 h1 {
     color: var(--vscode-settings-headerForeground);
@@ -70,7 +73,7 @@ h1 {
             margin-bottom: 10px;
             margin-top: 0px;
 
-            >i {
+            > i {
                 vertical-align: middle;
             }
         }
